--- a/BlueBucksKiosk/View/DetailPage.storyboard
+++ b/BlueBucksKiosk/View/DetailPage.storyboard
@@ -20,29 +20,32 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xuH-iH-yhV">
                                 <rect key="frame" x="-10" y="-5" width="413" height="411"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="411" id="f72-7z-mQ1"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제품명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztk-Ag-KiK">
                                 <rect key="frame" x="40" y="430" width="263" height="25.333333333333314"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="263" id="Voz-vC-3No"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                <color key="textColor" red="0.33725491169999999" green="0.34117650989999998" blue="0.34901961679999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="smN-zl-ori">
-                                <rect key="frame" x="40" y="475.33333333333331" width="300" height="51.333333333333314"/>
+                                <rect key="frame" x="40" y="501.99999999999994" width="300" height="51.333333333333314"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제품 상세 설명" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hVQ-Cu-Mly">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="15.666666666666666"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.56862747670000002" green="0.56862747670000002" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="음료 사이즈별 가격 설명" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loY-ri-Fz8">
-                                        <rect key="frame" x="0.0" y="35.666666666666686" width="300" height="15.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="35.666666666666629" width="300" height="15.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.56862747670000002" green="0.56862747670000002" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -71,15 +74,28 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="263" id="z04-Tf-3SO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                <color key="textColor" red="0.33725491169999999" green="0.34117650989999998" blue="0.34901961679999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2S-r4-LeA">
-                                <rect key="frame" x="16" y="70" width="8" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coffee" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I11-Ts-7B3">
+                                <rect key="frame" x="40" y="463" width="300" height="13.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="t1E-kt-5GE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" red="0.56862747670000002" green="0.56862747670000002" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2S-r4-LeA">
+                                <rect key="frame" x="23" y="62" width="23" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="23" id="IJZ-KW-7FR"/>
+                                    <constraint firstAttribute="height" constant="28" id="af2-yZ-duf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="arrow">
+                                <state key="normal" image="BackBtnWhite">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -90,26 +106,32 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="W2S-r4-LeA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="23" id="3fg-h1-eqE"/>
                             <constraint firstItem="ztk-Ag-KiK" firstAttribute="top" secondItem="xuH-iH-yhV" secondAttribute="bottom" constant="24" id="6yc-up-Yuv"/>
-                            <constraint firstItem="smN-zl-ori" firstAttribute="top" secondItem="ztk-Ag-KiK" secondAttribute="bottom" constant="20" id="Dvf-iB-uL4"/>
+                            <constraint firstItem="ztk-Ag-KiK" firstAttribute="top" secondItem="W2S-r4-LeA" secondAttribute="bottom" constant="340" id="8NQ-iO-hd7"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="W2S-r4-LeA" secondAttribute="trailing" constant="347" id="DXJ-CW-lrC"/>
+                            <constraint firstItem="smN-zl-ori" firstAttribute="top" secondItem="I11-Ts-7B3" secondAttribute="bottom" constant="25.666666666666742" id="Ejs-xQ-1gN"/>
                             <constraint firstItem="W7N-Vt-Jiq" firstAttribute="top" secondItem="7GP-2J-9aj" secondAttribute="bottom" constant="25.666666666666629" id="JZb-Fx-Hx8"/>
                             <constraint firstItem="W7N-Vt-Jiq" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="29.5" id="Jsc-fl-6jj"/>
-                            <constraint firstItem="smN-zl-ori" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="KjJ-w8-D31"/>
+                            <constraint firstItem="I11-Ts-7B3" firstAttribute="top" secondItem="ztk-Ag-KiK" secondAttribute="bottom" constant="7.6666666666666856" id="LR0-U1-m0N"/>
                             <constraint firstItem="W7N-Vt-Jiq" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="NF5-8e-fhf"/>
                             <constraint firstItem="W7N-Vt-Jiq" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Nlz-82-WAl"/>
                             <constraint firstItem="ztk-Ag-KiK" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="NvA-wl-PEz"/>
+                            <constraint firstItem="W2S-r4-LeA" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="3" id="Nzs-9H-0Bt"/>
                             <constraint firstItem="xuH-iH-yhV" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="-5" id="O7d-Ex-O8o"/>
                             <constraint firstItem="xuH-iH-yhV" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="-10" id="WCF-hH-wsE"/>
-                            <constraint firstItem="smN-zl-ori" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" constant="475.32999999999998" id="Xsm-jg-W1G"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="W7N-Vt-Jiq" secondAttribute="trailing" constant="29.5" id="aCa-Pc-ir0"/>
+                            <constraint firstItem="I11-Ts-7B3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="aIh-fu-FMc"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="7GP-2J-9aj" secondAttribute="trailing" constant="40" id="k6G-oJ-cUi"/>
                             <constraint firstItem="xuH-iH-yhV" firstAttribute="trailing" secondItem="5EZ-qb-Rvc" secondAttribute="trailing" constant="10" id="ogV-91-mfk"/>
+                            <constraint firstItem="smN-zl-ori" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="vz9-P1-V7c"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="W7N-Vt-Jiq" secondAttribute="bottom" constant="9" id="zQW-IF-a56"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="boxBtn" destination="W7N-Vt-Jiq" id="FXQ-Xo-RUe"/>
                         <outlet property="descriptionText" destination="hVQ-Cu-Mly" id="odg-oA-2Ho"/>
+                        <outlet property="engNameLabel" destination="I11-Ts-7B3" id="xv3-cZ-Pa3"/>
                         <outlet property="imageView" destination="xuH-iH-yhV" id="OcQ-VD-ucT"/>
                         <outlet property="nameLabel" destination="ztk-Ag-KiK" id="CGS-XE-p2W"/>
                         <outlet property="priceLabel" destination="7GP-2J-9aj" id="2PT-hc-KPx"/>
@@ -123,7 +145,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow" width="56" height="104"/>
+        <image name="BackBtnWhite" width="84" height="93"/>
         <namedColor name="maincolor">
             <color red="0.0" green="0.6588235294117647" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
